[tool.poetry]
name = "repl_python3_demo-test-pedro"
version = "0.1.0"
description = ""
authors = ["juanengml <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
console-logging = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
